<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >


    <TextView
        android:id="@+id/loggedInAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Logged in as:"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/circle_cropped" />

    <TextView
        android:id="@+id/welcomeMessageHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcomeHome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/quizButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/main_menu_buttons"
                android:drawableTop="@drawable/ic_noun_quiz_2690286"
                android:onClick="startQuizMode"
                android:padding="20dp"
                android:text="@string/quizButton"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/flashcardButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_menu_buttons"
                android:drawableTop="@drawable/ic_noun_cards_20461"
                android:onClick="openFlashcardActivity"
                android:padding="20dp"
                android:layout_weight="1"
                android:text="@string/flashcardButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/glossaryButton"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/main_menu_buttons"
                android:onClick="openGlossaryActivity"
                android:padding="20dp"
                android:text="@string/glossary"
                android:drawableTop="@drawable/ic_noun_vocabulary_3859957"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/leaderboardsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/main_menu_buttons"
                android:padding="20dp"
                android:drawableTop="@drawable/ic_noun_leaderboard_3812445"
                android:text="@string/leaderboardsButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:onClick="openLeaderboards"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/achievementsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/main_menu_buttons"
                android:padding="20dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_noun_achievement_426753"
                android:text="@string/achievementsButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:onClick="openAchievementsActivity"
                android:textSize="10sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:background="@drawable/main_menu_buttons"
                android:padding="20dp"
                android:drawableTop="@drawable/ic_noun_statistics_4016514"
                android:text="@string/stats"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:onClick="startStats"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/main_menu_buttons"
                android:onClick="logout"
                android:padding="20dp"
                android:text="Log out"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>