<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColour"
    tools:context=".LoginActivity"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imgLogoSplash"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:src="@drawable/circle_cropped"/>

    <TextView
        android:id="@+id/logoCaptionSplash"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:lineHeight="22dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:text="@string/welcomeLogin"
        android:textColor="@color/black"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/email2"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/black"
        android:drawableRight="@drawable/ic_baseline_email_24"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="#808080" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textColorHint="#808080"
        android:maxLines="1"
        android:inputType="textPassword"
        android:backgroundTint="@color/black"
        android:layout_marginRight="20dp"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:hint="Password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:background="@drawable/confirm_button_background"
        android:text="Log in"/>



    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="#808080"
        android:text="@string/don_t_have_an_account_click_here_to_sign_up"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="#808080"
        android:text="@string/forgot_password"/>


    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    </LinearLayout>


</ScrollView>